--- a/public/src/styles/login/_variables.scss
+++ b/public/src/styles/login/_variables.scss
@@ -1,2 +1,5 @@
-$login-background-color: #17213A;
+$login-background-color: #2D2C3C;
 $title-color: white;
+$headline-background-color: #ff6767;
+$panel-background-color: #282639;
+$label-color: white;
