--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -8,12 +8,13 @@
                 <form action="#" class="form" method="post">
                     <div>
                         <label for="login">Login:</label>
-                        <input type="text" name="login" id="login" class="input">
+                        <input type="text" name="login" id="login" class="input" placeholder="Login">
                     </div>
                     <div>
                         <label for="password">Password:</label>
-                        <input type="password" name="password" id="password" class="input">
+                        <input type="password" name="password" id="password" class="input" placeholder="Password">
                     </div>
+                    <button class="button" type="submit">Login</button>
                 </form>
             </div>
         </div>
