--- a/public/src/styles/buttons/_variables.scss
+++ b/public/src/styles/buttons/_variables.scss
@@ -1,3 +1,5 @@
 $color: white;
 $background-color: #ff6767;
 $after-background-color: #ff6767;
+$button-header-background-color: #454D66;
+$button-header-hover-background-color: #667EEA;
