add basic main navigation markup and style

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -2,45 +2,41 @@
 
 {% block header %}
     <header class="page-header">
-        <nav class="navigation">
-            <form class="search">
-                <label for="search"></label>
-                <input type="search" class="input" id="search">
-            </form>
-            <ul>
-                <li>
-                    <button class="button-header"></button>
-                    <span>notifications</span>
-                </li>
-                <li>
-                    <button class="button-header"></button>
-                    <span>language</span>
-                </li>
-                <li>
-                    <button class="button-header"></button>
-                    <span>user activity</span>
-                </li>
-                <li>
-                    <button class="button-header"></button>
-                    <span>profile</span>
-                </li>
-                <li>
-                    <button class="button-header"></button>
-                    <span>settings</span>
-                </li>
-            </ul>
-        </nav>
+        <div class="wrapper-sus">
+            <nav class="navigation">
+                <form class="search">
+                    <label for="search"></label>
+                    <input type="search" class="input" id="search">
+                </form>
+                <ul>
+                    <li>
+                        <button class="button-header"></button>
+                        <span>notifications</span>
+                    </li>
+                    <li>
+                        <button class="button-header"></button>
+                        <span>language</span>
+                    </li>
+                    <li>
+                        <button class="button-header"></button>
+                        <span>user activity</span>
+                    </li>
+                    <li>
+                        <button class="button-header"></button>
+                        <span>profile</span>
+                    </li>
+                    <li>
+                        <button class="button-header"></button>
+                        <span>settings</span>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 {% endblock %}
 
 {% block main %}
-    <section class="section dashboard">
-        <div class="wrapper-sus">
-            <div class="content">
-
-            </div>
-        </div>
-    </section>
+    {{ include('admin/twigBlocks/main-navigation.html.twig') }}
 {% endblock %}
 
 {% block footer %}
