--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -1,8 +1,12 @@
+@use 'boxes';
 @use 'buttons';
+@use 'dashboard';
 @use 'grid';
-@use 'susanoo-functions';
 @use 'inputs';
+@use 'links';
 @use 'login';
 @use 'main-navigation';
 @use 'page-header';
 @use 'reset-list';
+@use 'susanoo-functions';
+@use 'section';
