--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -1,4 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'login/base.html.twig' %}
+
+{% block header %}{% endblock %}
+
 {% block main %}
 <div class="login">
     <div class="wrapper">
