--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,42 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block header %}
-    <header class="page-header">
-        <div class="wrapper-sus">
-            <nav class="navigation">
-                <form class="search">
-                    <label for="search"></label>
-                    <input type="search" class="input" id="search">
-                </form>
-                <ul>
-                    <li>
-                        <button class="button-header"></button>
-                        <span>notifications</span>
-                    </li>
-                    <li>
-                        <button class="button-header"></button>
-                        <span>language</span>
-                    </li>
-                    <li>
-                        <button class="button-header"></button>
-                        <span>user activity</span>
-                    </li>
-                    <li>
-                        <button class="button-header"></button>
-                        <span>profile</span>
-                    </li>
-                    <li>
-                        <button class="button-header"></button>
-                        <span>settings</span>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-{% endblock %}
-
 {% block main %}
-    {{ include('admin/twigBlocks/main-navigation.html.twig') }}
+    <div class="wrapper-sus-main">
+        <div class="main-navigation-container">
+            {{ include('admin/twigBlocks/main-navigation.html.twig') }}
+        </div>
+        <div class="content">
+            <section class="section dashboard">
+                <div class="box-header users-online">
+                    <h2 class="h4 headline">Users Online</h2>
+                    <div class="container">
+                        <div class="online">
+                            <span class="amount">56</span>
+                            Online
+                        </div>
+                        <div class="percent">
+                            <span>14</span>%
+                        </div>
+                    </div>
+                </div>
+                <div class="box-header new-users">
+                    <h2 class="h4 headline">New Accounts</h2>
+                    <div class="container">
+                        <div class="accounts">
+                            <span class="amount">234</span> %
+                        </div>
+                        <div class="percent">
+                            <span>34</span>%
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
 {% endblock %}
 
 {% block footer %}
