--- a/templates/admin/twigBlocks/main-navigation.html.twig
+++ b/templates/admin/twigBlocks/main-navigation.html.twig
@@ -1,5 +1,4 @@
-<section class="section main-navigation">
-    <div class="wrapper-sus">
+<section class="main-navigation">
         <nav class="navigation">
             <div>
                 <h2 class="h4 headline">Main Navigation</h2>
@@ -11,7 +10,7 @@
                         <a href="#">Pages</a>
                     </li>
                     <li>
-                        <a href="#">Applications</a>
+                        <a href="#" class="disabled">Applications</a>
                     </li>
                 </ul>
             </div>
@@ -19,13 +18,13 @@
                 <h2 class="h4 headline">UI Components</h2>
                 <ul>
                     <li>
-                        <a href="#">Elements</a>
+                        <a href="#" class="disabled">Elements</a>
                     </li>
                     <li>
-                        <a href="#">Components</a>
+                        <a href="#" class="disabled">Components</a>
                     </li>
                     <li>
-                        <a href="#">Tables</a>
+                        <a href="#" class="disabled">Tables</a>
                     </li>
                 </ul>
             </div>
@@ -33,16 +32,15 @@
                 <h2 class="h4 headline">Material Components</h2>
                 <ul>
                     <li>
-                        <a href="#">Form</a>
+                        <a href="#" class="disabled">Form</a>
                     </li>
                     <li>
-                        <a href="#">Layout</a>
+                        <a href="#" class="disabled">Layout</a>
                     </li>
                     <li>
-                        <a href="#">Components</a>
+                        <a href="#" class="disabled">Components</a>
                     </li>
                 </ul>
             </div>
         </nav>
-    </div>
 </section>
