--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -1,7 +1,9 @@
 @use 'boxes';
 @use 'buttons';
 @use 'dashboard';
+@use 'fonts';
 @use 'grid';
+@use 'icons';
 @use 'inputs';
 @use 'links';
 @use 'login';
@@ -10,3 +12,4 @@
 @use 'reset-list';
 @use 'susanoo-functions';
 @use 'section';
+@use 'users';
