--- a/public/src/styles/susanoo-functions/_styles.scss
+++ b/public/src/styles/susanoo-functions/_styles.scss
@@ -6,7 +6,7 @@ $rem-base: 16px;
 
 @function convert-to-rem($value, $base-value: $rem-base)  {
   $value: strip-unit($value) / strip-unit($base-value) * 1rem;
-  @if ($value == 0rem) { $value: 0; } // Turn 0rem into 0
+  @if ($value == 0rem) { $value: 0; }
   @return $value;
 }
 
@@ -28,41 +28,20 @@ $breakpoints: (
         xxlarge: rem-calc(1920),
 ) !default;
 
-// All of the names in this list will be output as classes in your CSS, like small-12, medium-6, and so on.
 $breakpoint-classes: (small medium large) !default;
-///
 
-// 2. Mixins
-// - - - - - - - - - - - - - - -
-
-/// Wraps a media query around the content you put inside the mixin. This mixin accepts a number of values:
-///  - If a string is passed, the mixin will look for it in the $breakpoints map, and use a media query there.
-///  - If a pixel value is passed, it will be converted to an em value using $rem-base.
-///  - If a rem value is passed, the unit will be changed to em.
-///  - If an em value is passed, the value will be used as-is.
-///
-/// @param {mixed} $val - Breakpoint name or px/em/rem value to process.
-///
-/// @output If the breakpoint is "0px and larger", outputs the content. Otherwise, outputs the content wrapped in a media query.
 @mixin breakpoint($val: small) {
-  // Size or keyword
   $bp: nth($val, 1);
-  // Value for max-width media queries
   $bpMax: 0;
-  // Direction of media query (up, down, or only)
   $dir: if(length($val) > 1, nth($val, 2), up);
-  // Eventual output
   $str: 'only screen';
-  // Is it a named media query?
   $named: false;
 
-  // Orientation media queries have a unique syntax
   @if $bp == 'landscape' or $bp == 'portrait' {
     $str: $str + ' and (orientation: #{$bp})';
   }
 
   @else {
-    // Try to pull a named breakpoint out of the $breakpoints map
     @if type-of($bp) == 'string' {
       @if map-has-key($breakpoints, $bp) {
         @if $dir == 'only' {
@@ -82,14 +61,11 @@ $breakpoint-classes: (small medium large) !default;
       }
     }
 
-    // Pixel and unitless values are converted to rems
     @if unit($bp) == 'px' or unit($bp) == '' {
       $bp: rem-calc($bp);
     }
-    // Finally, the rem value is turned into an em value
     $bp: strip-unit($bp) * 1em;
 
-    // Skip media query creation if the input is "0 up" or "0 down"
     @if $bp > 0 or $dir == 'only' {
       // And lo, a media query was born
       @if $dir == 'only' {
@@ -113,7 +89,6 @@ $breakpoint-classes: (small medium large) !default;
     }
   }
 
-  // Output
   @if $bp == 0em and $dir != 'only' {
     @content;
   }
@@ -121,5 +96,23 @@ $breakpoint-classes: (small medium large) !default;
     @media #{$str} {
       @content;
     }
+  }
+}
+
+@mixin icon($icon, $font-styles: true) {
+  content: $icon;
+
+  @if $font-styles == true {
+    font: {
+      family: "icomoon";
+      style: normal;
+      weight: normal;
+      variant: normal;
+    }
+    speak: never;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
