--- a/public/src/styles/buttons/_variables.scss
+++ b/public/src/styles/buttons/_variables.scss
@@ -1,5 +1,6 @@
 $color: white;
 $background-color: #ff6767;
 $after-background-color: #ff6767;
-$button-header-background-color: #454D66;
-$button-header-hover-background-color: #667EEA;
+$button-header-before-color: white;
+$button-menu-before-hover-color: #ff6767;
+$button-menu-hover-color: white;
