--- a/public/src/styles/grid/_styles.scss
+++ b/public/src/styles/grid/_styles.scss
@@ -17,6 +17,10 @@ html,
 }
 
 body {
+    height: 100vh;
+    background: {
+        color: #f1f4f6;
+    }
     font: {
         size: 87.5%;
     }
