--- a/templates/admin/twigBlocks/main-navigation.html.twig
+++ b/templates/admin/twigBlocks/main-navigation.html.twig
@@ -1,13 +1,13 @@
 <section class="main-navigation">
         <nav class="navigation">
-            <div>
+            <div class="container">
                 <h2 class="h4 headline">Main Navigation</h2>
                 <ul>
                     <li>
-                        <a href="#">Dashboards</a>
+                        <a href="#" class="dashboard-link"><span>Dashboards</span></a>
                     </li>
                     <li>
-                        <a href="#">Pages</a>
+                        <a href="#" class="pages-link"><span>Pages</span></a>
                     </li>
                     <li>
                         <a href="#" class="disabled">Applications</a>
