--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,23 +31,30 @@
                     </form>
                     <ul>
                         <li>
-                            <button class="button-header"></button>
+                            <button class="button-header notification"></button>
                             <span>notifications</span>
                         </li>
                         <li>
-                            <button class="button-header"></button>
+                            <button class="button-header language"></button>
                             <span>language</span>
                         </li>
                         <li>
-                            <button class="button-header"></button>
+                            <button class="button-header statistic"></button>
                             <span>user activity</span>
                         </li>
                         <li>
-                            <button class="button-header"></button>
-                            <span>profile</span>
+                            <div class="profile">
+                                <div>
+                                    <img src="{{ asset('src/pics/img-2.jpg') }}" alt="Profile image">
+                                </div>
+                                <div class="informations">
+                                    <div class="name">Dawid Ol</div>
+                                    <div class="profession">Fullstack Developer</div>
+                                </div>
+                            </div>
                         </li>
                         <li>
-                            <button class="button-header"></button>
+                            <button class="button-menu"></button>
                             <span>settings</span>
                         </li>
                     </ul>
