--- a/public/src/styles/icons/_variables.scss
+++ b/public/src/styles/icons/_variables.scss
@@ -1,3 +1,8 @@
-$icon-menu: "\e90e";
-$icon-magnifying-glass: "\e90c";
-$icon-check: "\e902";
+$icon-menu: "\e901";
+$icon-search: "\e986";
+$icon-rocket: "\e902";
+$icon-open-book: "\e900";
+$icon-megaphone: "\e904";
+$icon-browser: "\e903";
+$icon-network: "\e905";
+$icon-pie-chart: "\e99a";
