improved styles and Markup, add not finalised dropdown

--- a/public/src/styles/boxes/_styles.scss
+++ b/public/src/styles/boxes/_styles.scss
@@ -96,10 +96,10 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            color: #8494AC;
             border: {
                 width: 1px;
                 style: solid;
+                color: #ff6767;
             }
         }
     }
