--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -1,6 +1,7 @@
 @use 'boxes';
 @use 'buttons';
 @use 'dashboard';
+@use 'dropdown';
 @use 'fonts';
 @use 'grid';
 @use 'icons';
@@ -12,4 +13,5 @@
 @use 'reset-list';
 @use 'susanoo-functions';
 @use 'section';
+@use "tables";
 @use 'users';
