--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,11 +7,7 @@
         </div>
         <div class="content">
             {{ include('admin/twigBlocks/section-dashboard.html.twig') }}
-            <section class="section users">
-                <div class="box-big container">
-                    <h2 class="h3 headline">List of all users</h2>
-                </div>
-            </section>
+            {{ include('admin/twigBlocks/section-users.html.twig') }}
         </div>
     </div>
 {% endblock %}
