--- a/templates/admin/twigBlocks/section-dashboard.html.twig
+++ b/templates/admin/twigBlocks/section-dashboard.html.twig
@@ -36,4 +36,17 @@
             </div>
         </div>
     </div>
+    <div class="box-header total-views">
+        <h2 class="h4 headline">Total Views</h2>
+        <div class="container">
+            <div class="accounts">
+                <span class="amount">301</span>k
+            </div>
+            <div class="percent">
+                <div class="bar" data-circle-progression>
+                    <span class="box" data-counter-percentage></span>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
