--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,8 +54,14 @@
                             </div>
                         </li>
                         <li>
-                            <button class="button-menu"></button>
+                            <button class="button-menu" data-button-menu></button>
                             <span>settings</span>
+                            <div class="dropdown-menu" data-dropdown-menu>
+                                <a href="#">Settings</a>
+                                <form action="#" method="post">
+                                    <button type="submit">Logout</button>
+                                </form>
+                            </div>
                         </li>
                     </ul>
                 </nav>
