add basic register form

--- a/templates/admin/twigBlocks/main-navigation.html.twig
+++ b/templates/admin/twigBlocks/main-navigation.html.twig
@@ -4,7 +4,7 @@
                 <h2 class="h4 headline">Main Navigation</h2>
                 <ul>
                     <li>
-                        <a href="#" class="dashboard-link"><span>Dashboards</span></a>
+                        <a href="{{ path('susanoo_dashboard') }}" class="dashboard-link"><span>Dashboards</span></a>
                     </li>
                     <li>
                         <a href="#" class="pages-link"><span>Pages</span></a>
