--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -10,6 +10,7 @@
 @use 'login';
 @use 'main-navigation';
 @use 'page-header';
+@use 'register-form';
 @use 'reset-list';
 @use 'susanoo-functions';
 @use 'section';
