--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,7 @@
                             <span>settings</span>
                             <div class="dropdown-menu" data-dropdown-menu>
                                 <a href="#">Settings</a>
-                                <a href="#">Register User</a>
+                                <a href="{{ path('susanoo_register') }}">Register User</a>
                                 <a href="{{ path('logout') }}">Logout</a>
                             </div>
                         </li>
