add functionality to register form

--- a/public/src/styles/register-form/_styles.scss
+++ b/public/src/styles/register-form/_styles.scss
@@ -11,7 +11,7 @@
             flex: {
                 direction: column;
             }
-            &:last-child {
+            &.container-submit {
                 grid-row: 3;
                 grid-column: span 1;
             }
