--- a/templates/admin/register.html.twig
+++ b/templates/admin/register.html.twig
@@ -8,31 +8,46 @@
         <div class="content">
             <section class="section register">
                 <div class="box-big">
-                    <form action="#" class="form" method="post">
+                    {{ form_start(form, {'attr': {'novalidate':'novalidate', 'class':'form'}}) }}
                         <div>
-                            <label for="name">Name:</label>
-                            <input type="text" class="input name" name="name" id="name">
+                            <label for="user_name">Name:</label>
+                            {{ form_widget(form.name, { 'attr': {'class': 'input'} }) }}
+                            <div>
+                                {{ form_errors(form.name) }}
+                            </div>
                         </div>
                         <div>
-                            <label for="last-name">Last name:</label>
-                            <input type="text" class="input last-name" name="last-name" id="last-name">
+                            <label for="user_last_name">Last name:</label>
+                            {{ form_widget(form.last_name, { 'attr': {'class': 'input'} }) }}
+                            <div>
+                                {{ form_errors(form.last_name) }}
+                            </div>
                         </div>
                         <div>
-                            <label for="email">E-mail:</label>
-                            <input type="email" class="input email" name="email" id="email">
+                            <label for="user_email">E-mail:</label>
+                            {{ form_widget(form.email, { 'attr': {'class': 'input'} }) }}
+                            <div>
+                                {{ form_errors(form.email) }}
+                            </div>
                         </div>
                         <div>
-                            <label for="password">Password:</label>
-                            <input type="password" class="input password" name="password" id="password">
+                            <label for="user_password_first">Password:</label>
+                            {{ form_widget(form.password.first, { 'attr': {'class': 'input'} }) }}
+                            <div>
+                                {{ form_errors(form.password.first) }}
+                            </div>
                         </div>
                         <div>
-                            <label for="confirm-password">Confirm password:</label>
-                            <input type="password" class="input confirm-password" name="confirm-password" id="confirm-password">
+                            <label for="user_password_second">Confirm password:</label>
+                            {{ form_widget(form.password.second, { 'attr': {'class': 'input'} }) }}
+                            <div>
+                                {{ form_errors(form.password.second) }}
+                            </div>
                         </div>
-                        <div>
+                        <div class="container-submit">
                             <button type="submit" class="button">Create User</button>
                         </div>
-                    </form>
+                    {{ form_end(form) }}
                 </div>
             </section>
         </div>
